--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,7 @@
     table{width:100%; border-collapse:collapse; margin-top:8px;}
     th, td{border-bottom:1px solid #eee; padding:8px; font-size:14px; text-align:left; vertical-align:top;}
     th{background:#fafafa; position:sticky; top:0;}
+    .muted{color:#666;}
   </style>
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -36,18 +37,36 @@
     <span id="meName" class="pill">未ログイン</span>
   </div>
 
-  <!-- ✅ ①予約一覧（上） -->
+  <!-- ✅ ①予約一覧（上）＋ 期間指定CSV -->
   <div class="card" style="margin-top:12px;">
     <div class="row" style="justify-content:space-between;">
-      <h3 style="margin:0;">予約一覧（新しい順）</h3>
-      <button id="reloadBtn">再読み込み</button>
+      <h3 style="margin:0;">予約一覧（今後の予約が基本）</h3>
+      <div class="row">
+        <button id="reloadBtn">再読み込み</button>
+      </div>
     </div>
 
-    <div class="row" style="margin-top:6px;">
-      <span class="small">表示：</span>
+    <div class="row" style="margin-top:8px;">
+      <span class="small">車：</span>
       <select id="carFilter">
         <option value="all">全車</option>
       </select>
+
+      <span class="small">表示：</span>
+      <select id="modeFilter">
+        <option value="future" selected>今後のみ（今日以降）</option>
+        <option value="range">期間指定</option>
+      </select>
+    </div>
+
+    <div id="rangeBox" class="row" style="margin-top:8px; display:none;">
+      <span class="small">開始日：</span>
+      <input id="rangeStart" type="date">
+      <span class="small">終了日：</span>
+      <input id="rangeEnd" type="date">
+      <button id="applyRangeBtn">この期間で表示</button>
+      <button id="downloadCsvBtn">CSVダウンロード</button>
+      <span class="small muted">※取り消し（削除）済み予約は含まれません</span>
     </div>
 
     <div id="reservationsBox" style="margin-top:10px;">読み込み中…</div>
@@ -61,6 +80,7 @@
   </div>
 
 <script>
+  // ✅ あなたの値
   const LIFF_ID = "2008829976-rJa7ANlR";
   const SUPABASE_URL = "https://jmobmcphzqxbybkqpwfd.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imptb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
@@ -75,6 +95,25 @@
   const fmtYmd = d => `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
   const fmtHm = d => `${pad(d.getHours())}:${pad(d.getMinutes())}`;
 
+  function todayStartLocal(){
+    const now = new Date();
+    return new Date(now.getFullYear(), now.getMonth(), now.getDate(), 0, 0, 0, 0);
+  }
+
+  function ymdToLocalStartISO(ymd){
+    // "YYYY-MM-DD" の 00:00(ローカル) を ISOに
+    const [y,m,d] = ymd.split("-").map(Number);
+    const dt = new Date(y, m-1, d, 0, 0, 0, 0);
+    return dt.toISOString();
+  }
+
+  function ymdToLocalEndExclusiveISO(ymd){
+    // 終了日は「翌日00:00（ローカル）」を上限にする（<=23:59相当）
+    const [y,m,d] = ymd.split("-").map(Number);
+    const dt = new Date(y, m-1, d+1, 0, 0, 0, 0);
+    return dt.toISOString();
+  }
+
   async function initLiff(){
     await liff.init({ liffId: LIFF_ID });
     if(!liff.isLoggedIn()){ liff.login(); return false; }
@@ -86,11 +125,18 @@
   }
 
   async function requireAdmin(){
-    const { data } = await sb
+    const { data, error } = await sb
       .from("admins")
       .select("user_id")
       .eq("user_id", me.userId)
       .maybeSingle();
+
+    if(error){
+      console.error(error);
+      $("status").textContent = "管理者チェック失敗";
+      alert("管理者チェックに失敗しました。");
+      throw error;
+    }
 
     if(!data){
       document.body.innerHTML = `
@@ -102,19 +148,24 @@
   }
 
   async function loadCars(){
-    const { data } = await sb.from("cars").select("*").order("id");
+    const { data, error } = await sb.from("cars").select("*").order("id");
+    if(error) throw error;
 
     carsMap = {};
     data.forEach(c=>carsMap[c.id]=c.name);
 
+    // フィルタ
+    const current = $("carFilter").value;
     $("carFilter").innerHTML =
       `<option value="all">全車</option>` +
       data.map(c=>`<option value="${c.id}">${c.name}</option>`).join("");
+    if(current) $("carFilter").value = current;
 
+    // 車名編集UI
     $("carsBox").innerHTML = data.map(c=>`
       <div class="row">
         <span class="pill">ID:${c.id}</span>
-        <input id="carName_${c.id}" value="${c.name}" style="flex:1; min-width:200px;">
+        <input id="carName_${c.id}" value="${String(c.name||"").replaceAll('"','&quot;')}" style="flex:1; min-width:200px;">
         <button data-save="${c.id}">保存</button>
       </div>
     `).join("");
@@ -122,24 +173,86 @@
     document.querySelectorAll("button[data-save]").forEach(btn=>{
       btn.onclick = async ()=>{
         const id = btn.dataset.save;
-        const name = $("carName_"+id).value.trim();
+        const name = ($("carName_"+id).value || "").trim();
         if(!name) return alert("車名を入力してください");
-        await sb.from("cars").update({name}).eq("id", id);
-        await loadCars();
-        await loadReservations();
-        alert("保存しました");
+
+        btn.disabled = true;
+        try{
+          const { error } = await sb.from("cars").update({name}).eq("id", Number(id));
+          if(error) throw error;
+          await loadCars();
+          await loadReservations(); // 一覧にも反映
+          alert("保存しました");
+        }catch(e){
+          console.error(e);
+          alert("保存に失敗しました");
+        }finally{
+          btn.disabled = false;
+        }
       };
     });
   }
 
-  async function loadReservations(){
-    const filter = $("carFilter").value;
-    let q = sb.from("reservations")
-      .select("car_id,user_name,start_time,end_time,note")
-      .order("start_time",{ascending:false});
-    if(filter!=="all") q = q.eq("car_id", Number(filter));
+  function getFilterParams(){
+    const car = $("carFilter").value;     // all or id
+    const mode = $("modeFilter").value;   // future or range
 
-    const { data } = await q;
+    if(mode === "future"){
+      const startISO = todayStartLocal().toISOString(); // 今日00:00以降
+      return { car, mode, startISO, endISO: null };
+    }
+
+    // range
+    const s = $("rangeStart").value;
+    const e = $("rangeEnd").value;
+    if(!s || !e) return { car, mode, startISO: null, endISO: null, invalid:true };
+
+    return {
+      car,
+      mode,
+      startISO: ymdToLocalStartISO(s),
+      endISO: ymdToLocalEndExclusiveISO(e), // 終了日は翌日00:00で切る
+      invalid:false
+    };
+  }
+
+  async function fetchReservationsForTable(){
+    const p = getFilterParams();
+
+    let q = sb.from("reservations")
+      .select("id, car_id, user_name, start_time, end_time, note")
+      .order("start_time", { ascending: false }); // 新しい順（表示）
+
+    if(p.car !== "all") q = q.eq("car_id", Number(p.car));
+
+    // 今後のみ：start_time で絞る（表示の基本）
+    if(p.mode === "future"){
+      q = q.gte("start_time", p.startISO);
+    }
+
+    // 期間指定：start_time が期間内のもの（シンプル運用）
+    if(p.mode === "range"){
+      if(p.invalid) return { data:[], error:null, invalid:true };
+      q = q.gte("start_time", p.startISO).lt("start_time", p.endISO);
+    }
+
+    const { data, error } = await q;
+    return { data: data || [], error, invalid:false };
+  }
+
+  async function loadReservations(){
+    const { data, error, invalid } = await fetchReservationsForTable();
+
+    if(invalid){
+      $("reservationsBox").innerHTML = `<div class="small">開始日と終了日を入力してください。</div>`;
+      return;
+    }
+
+    if(error){
+      console.error(error);
+      $("reservationsBox").innerHTML = `<div class="small">取得に失敗しました。</div>`;
+      return;
+    }
 
     if(!data.length){
       $("reservationsBox").innerHTML = `<div class="small">予約はありません</div>`;
@@ -154,9 +267,10 @@
         <tbody>
           ${data.map(r=>{
             const s=new Date(r.start_time), e=new Date(r.end_time);
+            const carName = carsMap?.[Number(r.car_id)] ?? `車ID:${r.car_id}`;
             return `
               <tr>
-                <td>${carsMap[r.car_id]}</td>
+                <td>${carName}</td>
                 <td>${fmtYmd(s)}</td>
                 <td>${fmtHm(s)}〜${fmtHm(e)}</td>
                 <td>${r.user_name||""}</td>
@@ -169,15 +283,127 @@
     `;
   }
 
-  $("reloadBtn").onclick = ()=>{ loadCars(); loadReservations(); };
+  // ===== CSV =====
+  function csvEscape(v){
+    const s = String(v ?? "");
+    if(/[",\n\r]/.test(s)){
+      return `"${s.replaceAll('"','""')}"`;
+    }
+    return s;
+  }
+
+  function downloadTextFile(filename, text){
+    const blob = new Blob([text], { type: "text/csv;charset=utf-8;" });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = filename;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(url);
+  }
+
+  async function downloadCsv(){
+    // 期間指定でのみダウンロード
+    if($("modeFilter").value !== "range"){
+      alert("CSVダウンロードは「期間指定」に切り替えてください。");
+      return;
+    }
+
+    const p = getFilterParams();
+    if(p.invalid){
+      alert("開始日と終了日を入力してください。");
+      return;
+    }
+
+    // CSVは見やすいように「古い→新しい」
+    let q = sb.from("reservations")
+      .select("car_id, user_name, start_time, end_time, note")
+      .gte("start_time", p.startISO).lt("start_time", p.endISO)
+      .order("start_time", { ascending: true });
+
+    if(p.car !== "all") q = q.eq("car_id", Number(p.car));
+
+    const { data, error } = await q;
+    if(error){
+      console.error(error);
+      alert("CSVの取得に失敗しました。");
+      return;
+    }
+
+    const rows = data || [];
+    const header = ["車","日付","開始","終了","利用者","用途メモ"];
+
+    const lines = [header.map(csvEscape).join(",")];
+
+    rows.forEach(r=>{
+      const s = new Date(r.start_time);
+      const e = new Date(r.end_time);
+      const carName = carsMap?.[Number(r.car_id)] ?? `車ID:${r.car_id}`;
+
+      const line = [
+        carName,
+        fmtYmd(s),
+        fmtHm(s),
+        fmtHm(e),
+        r.user_name || "",
+        r.note || ""
+      ].map(csvEscape).join(",");
+
+      lines.push(line);
+    });
+
+    // Excel対策：UTF-8 BOM を付ける
+    const csv = "\uFEFF" + lines.join("\n");
+
+    const sYmd = $("rangeStart").value;
+    const eYmd = $("rangeEnd").value;
+    const carPart = (p.car === "all") ? "全車" : (carsMap?.[Number(p.car)] ?? `車${p.car}`);
+    const filename = `社用車予約_${carPart}_${sYmd}〜${eYmd}.csv`;
+
+    downloadTextFile(filename, csv);
+  }
+
+  // ===== UI =====
+  function syncRangeBox(){
+    const isRange = ($("modeFilter").value === "range");
+    $("rangeBox").style.display = isRange ? "flex" : "none";
+  }
+
+  $("reloadBtn").onclick = async ()=>{ await loadCars(); await loadReservations(); };
+
   $("carFilter").onchange = loadReservations;
 
-  (async()=>{
-    await initLiff();
-    await requireAdmin();
-    await loadCars();
+  $("modeFilter").onchange = async ()=>{
+    syncRangeBox();
     await loadReservations();
-    $("status").textContent = "表示中";
+  };
+
+  $("applyRangeBtn").onclick = loadReservations;
+  $("downloadCsvBtn").onclick = downloadCsv;
+
+  // 起動
+  (async()=>{
+    try{
+      await initLiff();
+      await requireAdmin();
+
+      // デフォルト期間：今日〜30日後（入力が楽になるように）
+      const t = todayStartLocal();
+      const t2 = new Date(t.getFullYear(), t.getMonth(), t.getDate()+30, 0,0,0,0);
+      $("rangeStart").value = fmtYmd(t);
+      $("rangeEnd").value = fmtYmd(t2);
+
+      syncRangeBox();
+
+      await loadCars();
+      await loadReservations();
+
+      $("status").textContent = "表示中";
+    }catch(e){
+      console.error(e);
+    }
   })();
 </script>
 </body>
